@@ -5,9 +5,12 @@ import net.semanticmetadata.lire.builders.GlobalDocumentBuilder;
 import net.semanticmetadata.lire.imageanalysis.features.global.CEDD;
 import net.semanticmetadata.lire.imageanalysis.features.global.FCTH;
 import net.semanticmetadata.lire.imageanalysis.features.global.PHOG;
+import net.semanticmetadata.lire.indexers.hashing.MetricSpaces;
 import net.semanticmetadata.lire.indexers.parallel.ParallelIndexer;
 import net.semanticmetadata.lire.searchers.GenericDocValuesImageSearcher;
+import net.semanticmetadata.lire.searchers.GenericFastImageSearcher;
 import net.semanticmetadata.lire.searchers.ImageSearchHits;
+import net.semanticmetadata.lire.searchers.MetricSpacesImageSearcher;
 import net.semanticmetadata.lire.utils.StopWatch;
 import org.apache.lucene.index.DirectoryReader;
 import org.apache.lucene.index.IndexReader;
@@ -22,42 +25,69 @@ import java.nio.file.Paths;
  */
 public class DocValuesTest extends TestCase {
 
-    private File infile = new File("testdata/images.lst");
-//    private File infile = new File("D:\\DataSets\\Flickrphotos\\dir.txt");
-    private String indexPath = "ms-index-docval";
+//    private File infile = new File("testdata/images.lst");
+    private File infile = new File("/home/mlux/images3.lst");
+    private String indexPath = "ms-index-ms-500k";
+    private File mfile = new File("ms-cedd.dat");
 
-    public void testIndexing() {
-        ParallelIndexer p = new ParallelIndexer(8, indexPath, infile, GlobalDocumentBuilder.HashingMode.None, true);
+    public void testPrepare() throws IllegalAccessException, IOException, InstantiationException {
+        MetricSpaces.indexReferencePoints(CEDD.class, 5000, 25, infile, mfile);
+    }
+
+    public void testIndexing() throws IllegalAccessException, IOException, InstantiationException, ClassNotFoundException {
+        MetricSpaces.loadReferencePoints(mfile);
+        ParallelIndexer p = new ParallelIndexer(8, indexPath, infile, GlobalDocumentBuilder.HashingMode.MetricSpaces, false, 10000);
         p.addExtractor(CEDD.class);
         p.addExtractor(FCTH.class);
         p.addExtractor(PHOG.class);
         p.run();
     }
 
-    public void testSearch() throws IOException {
-        int numRuns = 10;
-        IndexReader reader = DirectoryReader.open(FSDirectory.open(Paths.get(indexPath)));
-        GenericDocValuesImageSearcher is = new GenericDocValuesImageSearcher(4, CEDD.class, reader);
+    public void testSearch() throws IOException, IllegalAccessException, ClassNotFoundException, InstantiationException {
+        int numRuns = 100;
+//        IndexReader reader = DirectoryReader.open(FSDirectory.open(Paths.get("ms-index-ms-500k")));
+//        IndexReader readerDocVal = DirectoryReader.open(FSDirectory.open(Paths.get("ms-index-docval-500k")));
+        IndexReader reader = DirectoryReader.open(FSDirectory.open(Paths.get("/media/mlux/SSD02/ms-index-ms-500k")));
+        IndexReader readerDocVal = DirectoryReader.open(FSDirectory.open(Paths.get("/media/mlux/SSD02/ms-index-docval-500k")));
+        System.out.printf("Number of documents: %d\n", reader.maxDoc());
+        GenericDocValuesImageSearcher is = new GenericDocValuesImageSearcher(100, FCTH.class, readerDocVal);
+        MetricSpacesImageSearcher mis = new MetricSpacesImageSearcher(100, mfile, 500);
+        mis.setNumHashesUsedForQuery(15);
+        StopWatch sw0 = new StopWatch();
+        sw0.start();
+        GenericFastImageSearcher gis = new GenericFastImageSearcher(100, CEDD.class, true, reader);
+        sw0.stop();
+        System.out.printf("Startup latency of cached searcher: %02.3f sec\n", sw0.getTime()/1000d);
+        GenericFastImageSearcher lis = new GenericFastImageSearcher(100, CEDD.class, false, reader);
         StopWatch sw1 = new StopWatch();
         StopWatch sw2 = new StopWatch();
+        StopWatch sw3 = new StopWatch();
+        StopWatch sw4 = new StopWatch();
         for (int i = 0; i < numRuns; i++) {
             sw1.start();
-            ImageSearchHits hits = is.search(reader.document(i), reader);
+            ImageSearchHits hits = gis.search(reader.document(i), reader);
             sw1.stop();
-            for (int j =0; j< hits.length(); j++) {
-                System.out.printf("%02d: %06d %02.3f\n", j + 1, hits.documentID(j), hits.score(j));
-            }
-            System.out.println("------< * >-------");
         }
         for (int i = 0; i < numRuns; i++) {
             sw2.start();
-            ImageSearchHits hits = is.search(i);
+            ImageSearchHits hits = mis.search(reader.document(i), reader);
             sw2.stop();
-            for (int j =0; j< hits.length(); j++) {
-                System.out.printf("%02d: %06d %02.3f\n", j + 1, hits.documentID(j), hits.score(j));
-            }
-            System.out.println("------< * >-------");
         }
-        System.out.printf("%02.3f vs. %02.3f seconds for %d runs", sw1.getTime()/1000d, sw2.getTime()/1000d, numRuns);
+        for (int i = 0; i < numRuns; i++) {
+            sw3.start();
+            ImageSearchHits hits = is.search(reader.document(i), reader);
+            sw3.stop();
+        }
+        for (int i = 0; i < numRuns; i++) {
+            sw4.start();
+//            ImageSearchHits hits = lis.search(reader.document(i), reader);
+            sw4.stop();
+        }
+        System.out.printf(
+                "cached   \t%02.3f\n" +
+                "metric_s \t%02.3f\n" +
+                "DocVal   \t%02.3f\n" +
+                "linear   \t%02.3f\n" +
+                "in seconds for %d runs", sw1.getTime() / 1000d, sw2.getTime() / 1000d,  sw3.getTime() / 1000d, sw4.getTime() / 1000d, numRuns);
     }
 }
