@@ -31,7 +31,7 @@ public class MetricSpacesTest extends TestCase {
 //    String infile = "D:\\DataSets\\MirFlickr\\images01.lst";
 
     public void testHashIndexing() throws IllegalAccessException, IOException, InstantiationException {
-        MetricSpaces.index(CEDD.class, 1000, 50, new File(infile), new File("dir.cedd.dat"));
+        MetricSpaces.indexReferencePoints(CEDD.class, 1000, 50, new File(infile), new File("dir.cedd.dat"));
 //        MetricSpaces.index(FCTH.class, 50, 8, new File(infile), new File("dir.fcth.dat"));
 //        MetricSpaces.index(PHOG.class, 50, 8, new File(infile), new File("dir.phog.dat"));
     }
@@ -83,15 +83,15 @@ public class MetricSpacesTest extends TestCase {
     }
 
     public void testSearchAccuracy() throws ClassNotFoundException, InstantiationException, IllegalAccessException, IOException {
-        IndexReader reader = DirectoryReader.open(FSDirectory.open(Paths.get("ms-index-300k")));
-        int maxResults = 20;
+        IndexReader reader = DirectoryReader.open(FSDirectory.open(Paths.get("/media/mlux/SSD02/ms-index-ms-500k")));
+        int maxResults = 10;
         int intersectSum = 0;
-        MetricSpacesImageSearcher mis = new MetricSpacesImageSearcher(maxResults, new File("dir.cedd.dat"), 500);
-        mis.setNumHashesUsedForQuery(20);
+        MetricSpacesImageSearcher mis = new MetricSpacesImageSearcher(maxResults, new File("ms-cedd.dat"), 1000);
+        mis.setNumHashesUsedForQuery(15);
         GenericFastImageSearcher fis = new GenericFastImageSearcher(maxResults, CEDD.class, true, reader);
         StopWatch sm = new StopWatch();
         StopWatch sf = new StopWatch();
-        int numRuns = 20;
+        int numRuns = 100;
         for (int i = 0; i < numRuns; i++) {
             Document document = reader.document(i);
             sm.start();
